# ai4ro2_2

./: .gitignore  README.md
visits_domain/: dom1.pddl  landmark.txt  prob1.pddl  region_poses  waypoint.txt
visits_module/src/: CMakeLists.txt  ExternalSolver.cpp  VisitSolver.cpp  VisitSolver.h  buildInstruction.txt  main.cpp
